<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

      <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="@dimen/tamaño_letra"
        android:textStyle="bold"
        android:textColor="@color/color_titulo"
        android:layout_centerHorizontal="true"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/titulo"
    >

        <EditText
            android:id="@+id/editNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio_top"
            android:hint="@string/nombre"
            android:inputType="text"
            android:maxLength="30" />

        <EditText
            android:id="@+id/editApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio_top"
            android:hint="@string/apellido"
            android:inputType="text"
            android:maxLength="30" />

        <EditText
            android:id="@+id/editDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio_top"
            android:hint="@string/dni"
            android:inputType="number"
            android:maxLength="8" />

        <EditText
            android:id="@+id/editCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio_top"
            android:hint="@string/correo"
            android:inputType="text"
            android:maxLength="40" />

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enviar"
            android:onClick="enviarDatos" />

    </LinearLayout>
</RelativeLayout>